fix(button): Fix vertical alignment of contents (#2534)

--- a/packages/mdc-button/_mixins.scss
+++ b/packages/mdc-button/_mixins.scss
@@ -67,16 +67,16 @@
 }
 
 @mixin mdc-button-horizontal-padding($padding) {
-  padding-right: $padding;
-  padding-left: $padding;
+  // $padding should be a single value; enforce it by specifying all 4 sides in the output
+  padding: 0 $padding 0 $padding;
 }
 
 @mixin mdc-button-stroke-width($stroke-width, $padding: $mdc-button-contained-horizontal-padding) {
   // Note: Adjust padding to maintain consistent width with non-stroked buttons
   $padding-value: max($padding - $stroke-width, 0);
 
-  padding-right: $padding-value;
-  padding-left: $padding-value;
+  @include mdc-button-horizontal-padding($padding-value);
+
   border-width: $stroke-width;
   // Note: line height is adjusted for stroke button because borders are not
   // considered as space available to text on the Web
@@ -104,6 +104,7 @@
   height: $mdc-button-height;
   border: none;
   outline: none;
+  line-height: inherit;
   user-select: none;
   -webkit-appearance: none;
   overflow: hidden;
